--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+#-----------------------------------------------------
+
+
+
+#ignore:
+
+*desktop.ini
+*.rar
+*/.vscode
+*/.grepWin_backup
+
+
+
+#-----------------------------------------------------
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
